--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes"
+    />
     <title>Portfolio Lukita Falensia Marjan</title>
     <meta
       name="description"
       content="Portfolio profesional di bidang informatika dengan pengalaman dalam pengembangan web, mobile, dan sistem informasi"
     />
+    <meta
+      name="keywords"
+      content="Lukita Falensia Marjan, Portfolio, Informatika, ERP, MES, Data Science, Machine Learning, Python"
+    />
+    <meta name="author" content="Lukita Falensia Marjan" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#3b82f6" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Lukita Falensia Marjan" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -132,7 +146,7 @@
                 <div class="stat-label">Tahun Belajar</div>
               </div>
               <div class="stat">
-                <div class="stat-number">6</div>
+                <div class="stat-number">8</div>
                 <div class="stat-label">Skill Dikuasai</div>
               </div>
             </div>
@@ -377,7 +391,11 @@
         <div class="projects-grid">
           <div class="project-card">
             <div class="project-image">
-              <img src="img/LukiAI Dashboard For Manufacturing.jpg" alt="Lukita Falensia Marjan" class="LukiAI Dashboard For Manufacturing">
+              <img
+                src="img/LukiAI Dashboard For Manufacturing.jpg"
+                alt="Lukita Falensia Marjan"
+                class="LukiAI Dashboard For Manufacturing"
+              />
               <div class="project-overlay">
                 <a
                   href="https://lukifm17.pythonanywhere.com/"
@@ -389,7 +407,9 @@
             <div class="project-content">
               <h3 class="project-title">LukiAI Dashboard For Manufacturing</h3>
               <p class="project-description">
-                Sebuah dashboard LukiAI yang dirancang untuk industri manufaktur seperti Predictive Maintenance, Quality Control, dan Supply Chain Optimization.
+                Sebuah dashboard LukiAI yang dirancang untuk industri manufaktur
+                seperti Predictive Maintenance, Quality Control, dan Supply
+                Chain Optimization.
               </p>
               <div class="project-tech">
                 <span class="tech-tag">Python</span>
@@ -410,9 +430,7 @@
             </div>
             <div class="project-content">
               <h3 class="project-title">OnProgress</h3>
-              <p class="project-description">
-                Lorem ipsum dolor sit amet.
-              </p>
+              <p class="project-description">Lorem ipsum dolor sit amet.</p>
               <div class="project-tech">
                 <span class="tech-tag">React Native</span>
                 <span class="tech-tag">Firebase</span>
@@ -432,9 +450,7 @@
             </div>
             <div class="project-content">
               <h3 class="project-title">OnProgress</h3>
-              <p class="project-description">
-                Lorem ipsum dolor sit amet.
-              </p>
+              <p class="project-description">Lorem ipsum dolor sit amet.</p>
               <div class="project-tech">
                 <span class="tech-tag">React Native</span>
                 <span class="tech-tag">Firebase</span>
@@ -442,7 +458,6 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </section>
@@ -459,10 +474,13 @@
             <div class="timeline-marker"></div>
             <div class="timeline-content">
               <h3 class="timeline-title">... Engineer / Specialist</h3>
-              <h4 class="timeline-company">Bekerja di - </h4>
+              <h4 class="timeline-company">Bekerja di -</h4>
               <p class="timeline-period">2006 - Sekarang</p>
               <p class="timeline-description">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio cupiditate laudantium alias reiciendis beatae natus quae consectetur fuga temporibus corporis at similique corrupti perspiciatis provident tempore magni nemo, eveniet sunt.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio
+                cupiditate laudantium alias reiciendis beatae natus quae
+                consectetur fuga temporibus corporis at similique corrupti
+                perspiciatis provident tempore magni nemo, eveniet sunt.
               </p>
             </div>
           </div>
@@ -471,10 +489,13 @@
             <div class="timeline-marker"></div>
             <div class="timeline-content">
               <h3 class="timeline-title">... Engineer / Specialist</h3>
-              <h4 class="timeline-company">Bekerja di - </h4>
+              <h4 class="timeline-company">Bekerja di -</h4>
               <p class="timeline-period">2000 - 2006</p>
               <p class="timeline-description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae hic nobis nihil perspiciatis voluptates vel. Earum ipsam tempore tenetur fuga rerum autem voluptas accusantium voluptate beatae, officiis consequuntur nostrum ullam!
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Molestiae hic nobis nihil perspiciatis voluptates vel. Earum
+                ipsam tempore tenetur fuga rerum autem voluptas accusantium
+                voluptate beatae, officiis consequuntur nostrum ullam!
               </p>
             </div>
           </div>
@@ -483,14 +504,16 @@
             <div class="timeline-marker"></div>
             <div class="timeline-content">
               <h3 class="timeline-title">... Engineer / Specialist</h3>
-              <h4 class="timeline-company">Bekerja di - </h4>
+              <h4 class="timeline-company">Bekerja di -</h4>
               <p class="timeline-period">1945 - 2000</p>
               <p class="timeline-description">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex temporibus ullam cupiditate, ipsa eligendi deserunt earum ad provident vitae omnis libero consequatur. Assumenda ea voluptate necessitatibus ab obcaecati. Ipsum, nesciunt.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex
+                temporibus ullam cupiditate, ipsa eligendi deserunt earum ad
+                provident vitae omnis libero consequatur. Assumenda ea voluptate
+                necessitatibus ab obcaecati. Ipsum, nesciunt.
               </p>
             </div>
           </div>
-
         </div>
       </div>
     </section>
@@ -585,7 +608,8 @@
               <span>Lukita Falensia M.</span>
             </div>
             <p class="footer-description">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus, quo!
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Delectus, quo!
             </p>
           </div>
           <div class="footer-section">
@@ -603,7 +627,9 @@
           <div class="footer-section">
             <h3>Contact Info</h3>
             <ul class="footer-links">
-              <li><i class="fas fa-envelope"></i> Lukita Falensia Marjan@gmail.com</li>
+              <li>
+                <i class="fas fa-envelope"></i> Lukita Falensia Marjan@gmail.com
+              </li>
               <li><i class="fas fa-phone"></i> +62 813-8595-0989</li>
               <li><i class="fas fa-map-marker-alt"></i> Karawang, Indonesia</li>
             </ul>
@@ -611,10 +637,24 @@
           <div class="footer-section">
             <h3>Follow Me</h3>
             <div class="footer-social">
-              <a href="https://www.linkedin.com/in/lukita-falensia-marjan-398494319?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"class="social-link"><i class="fab fa-linkedin"></i></a>
-              <a href="https://github.com/LukitaFalensiaMarjan"class="social-link"><i class="fab fa-github"></i></a>
-              <a href="mailto:lukitafalensiamarjan@gmail.com" class="social-link"><i class="fas fa-envelope"></i></a>
-              <a href="https://www.instagram.com/lukifm17" class="social-link"><i class="fab fa-instagram"></i></a>
+              <a
+                href="https://www.linkedin.com/in/lukita-falensia-marjan-398494319?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app"
+                class="social-link"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+              <a
+                href="https://github.com/LukitaFalensiaMarjan"
+                class="social-link"
+                ><i class="fab fa-github"></i
+              ></a>
+              <a
+                href="mailto:lukitafalensiamarjan@gmail.com"
+                class="social-link"
+                ><i class="fas fa-envelope"></i
+              ></a>
+              <a href="https://www.instagram.com/lukifm17" class="social-link"
+                ><i class="fab fa-instagram"></i
+              ></a>
             </div>
           </div>
         </div>
