--- a/index.html
+++ b/index.html
@@ -605,11 +605,10 @@
           <div class="footer-section">
             <div class="footer-logo">
               <i class="fas fa-user-tie"></i>
-              <span>Lukita Falensia M.</span>
+              <span>Lukita Falensia Marjan</span>
             </div>
             <p class="footer-description">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-              Delectus, quo!
+              Mahasiswa Informatika Industri | Future ERP/MES Specialist
             </p>
           </div>
           <div class="footer-section">
