--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
     />
     <title>Portfolio Lukita Falensia Marjan</title>
     <meta
-      name="description"
-      content="Portfolio profesional di bidang informatika dengan pengalaman dalam pengembangan web, mobile, dan sistem informasi"
-    />
-    <meta
       name="keywords"
-      content="Lukita Falensia Marjan, Portfolio, Informatika, ERP, MES, Data Science, Machine Learning, Python"
+      content="Lukita Falensia Marjan, Portfolio, Informatika, MLOps, Data Science, Machine Learning, Python, Docker, Kubernetes"
     />
     <meta name="author" content="Lukita Falensia Marjan" />
     <meta name="robots" content="index, follow" />
@@ -69,9 +65,8 @@
           </h1>
           <p class="hero-description">
             Mahasiswa Teknologi Rekayasa Informatika Industri yang
-            berspesialisasi dalam
-            <strong>Enterprise Resource Planning (ERP)</strong>,
-            <strong>Manufacturing Execution System (MES)</strong>,
+            mempunyai minat besar dalam
+            <strong>Machine Learning Operations (MLOps)</strong>,
             <strong>Data Science</strong>, dan
             <strong>Machine Learning</strong>. Mari wujudkan transformasi
             digital industri bersama!
@@ -116,7 +111,7 @@
       <div class="container">
         <div class="section-header">
           <h2 class="section-title">Tentang Saya</h2>
-          <p class="section-subtitle">Mahasiswa & Future ERP/MES Specialist</p>
+          <p class="section-subtitle">Mahasiswa & Future MLOps Engineer</p>
         </div>
         <div class="about-content">
           <div class="about-text">
@@ -125,16 +120,15 @@
               <strong>Teknologi Rekayasa Informatika Industri</strong> di
               <strong>Politeknik Manufaktur Bandung</strong> yang memiliki
               passion dalam bidang
-              <strong>Enterprise Resource Planning (ERP)</strong> dan
-              <strong>Manufacturing Execution System (MES)</strong>.
+              <strong>Machine Learning Operations (MLOps)</strong>.
             </p>
             <p>
               Saat ini saya fokus mempelajari <strong>Python</strong>,
               <strong>Machine Learning</strong>, dan
               <strong>Data Science</strong> untuk membangun fondasi yang kuat
-              dalam pengolahan data industri, analisis prediktif, dan optimasi
-              proses manufaktur. Saya percaya bahwa teknologi dapat
-              mentransformasi industri menjadi lebih efisien dan kompetitif.
+              dalam deployment model ML, CI/CD untuk AI, dan monitoring performa
+              model. Saya percaya bahwa teknologi dapat mentransformasi industri
+              menjadi lebih efisien dan kompetitif.
             </p>
             <div class="about-stats">
               <div class="stat">
@@ -174,35 +168,35 @@
         <div class="skills-grid">
           <div class="skill-category">
             <h3 class="skill-category-title">
-              <i class="fas fa-database"></i>
-              ERP & Database Systems
+              <i class="fas fa-server"></i>
+              MLOps & DevOps
             </h3>
             <div class="skill-items">
               <div class="skill-item">
                 <div class="skill-info">
-                  <span class="skill-name">SAP ERP</span>
-                  <span class="skill-percentage">75%</span>
+                  <span class="skill-name">Docker</span>
+                  <span class="skill-percentage">80%</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="width: 95%"></div>
+                  <div class="skill-progress" style="width: 80%"></div>
                 </div>
               </div>
               <div class="skill-item">
                 <div class="skill-info">
-                  <span class="skill-name">Oracle ERP</span>
+                  <span class="skill-name">Kubernetes</span>
                   <span class="skill-percentage">75%</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="width: 85%"></div>
+                  <div class="skill-progress" style="width: 75%"></div>
                 </div>
               </div>
               <div class="skill-item">
                 <div class="skill-info">
-                  <span class="skill-name">MySQL</span>
-                  <span class="skill-percentage">85%</span>
+                  <span class="skill-name">MLflow</span>
+                  <span class="skill-percentage">70%</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="width: 90%"></div>
+                  <div class="skill-progress" style="width: 70%"></div>
                 </div>
               </div>
             </div>
@@ -246,26 +240,26 @@
 
           <div class="skill-category">
             <h3 class="skill-category-title">
-              <i class="fas fa-cogs"></i>
-              MES & Automation
+              <i class="fas fa-cloud"></i>
+              Cloud & Infrastructure
             </h3>
             <div class="skill-items">
               <div class="skill-item">
                 <div class="skill-info">
-                  <span class="skill-name">PLC</span>
+                  <span class="skill-name">AWS</span>
                   <span class="skill-percentage">75%</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="width: 80%"></div>
+                  <div class="skill-progress" style="width: 75%"></div>
                 </div>
               </div>
               <div class="skill-item">
                 <div class="skill-info">
-                  <span class="skill-name">SCADA System</span>
+                  <span class="skill-name">Google Cloud</span>
                   <span class="skill-percentage">70%</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="width: 75%"></div>
+                  <div class="skill-progress" style="width: 70%"></div>
                 </div>
               </div>
             </div>
@@ -608,7 +602,7 @@
               <span>Lukita Falensia Marjan</span>
             </div>
             <p class="footer-description">
-              Mahasiswa Informatika Industri | Future ERP/MES Specialist
+              Mahasiswa Informatika Industri | MLOps Engineer
             </p>
           </div>
           <div class="footer-section">
