Update Contact Form

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </p>
             <div class="about-stats">
               <div class="stat">
-                <div class="stat-number">2</div>
+                <div class="stat-number">5</div>
                 <div class="stat-label">Proyek Akademik</div>
               </div>
               <div class="stat">
@@ -140,7 +140,7 @@
                 <div class="stat-label">Tahun Belajar</div>
               </div>
               <div class="stat">
-                <div class="stat-number">8</div>
+                <div class="stat-number">10</div>
                 <div class="stat-label">Skill Dikuasai</div>
               </div>
             </div>
@@ -168,13 +168,85 @@
         <div class="skills-grid">
           <div class="skill-category">
             <h3 class="skill-category-title">
-              <i class="fas fa-server"></i>
-              MLOps & DevOps
+              <i class="fas fa-code"></i>
+              Programming & Tools
             </h3>
             <div class="skill-items">
               <div class="skill-item">
                 <div class="skill-info">
-                  <span class="skill-name">Docker</span>
+                  <span class="skill-name">Python</span>
+                  <span class="skill-percentage">95%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 95%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">SQL</span>
+                  <span class="skill-percentage">90%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 90%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">Git</span>
+                  <span class="skill-percentage">85%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 85%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">Jupyter Notebook</span>
+                  <span class="skill-percentage">90%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 90%"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="skill-category">
+            <h3 class="skill-category-title">
+              <i class="fas fa-brain"></i>
+              Machine Learning & Frameworks
+            </h3>
+            <div class="skill-items">
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">TensorFlow</span>
+                  <span class="skill-percentage">90%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 90%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">PyTorch</span>
+                  <span class="skill-percentage">85%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 85%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">Scikit-learn</span>
+                  <span class="skill-percentage">95%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 95%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">XGBoost</span>
                   <span class="skill-percentage">80%</span>
                 </div>
                 <div class="skill-bar">
@@ -183,20 +255,11 @@
               </div>
               <div class="skill-item">
                 <div class="skill-info">
-                  <span class="skill-name">Kubernetes</span>
-                  <span class="skill-percentage">75%</span>
+                  <span class="skill-name">Keras</span>
+                  <span class="skill-percentage">85%</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="width: 75%"></div>
-                </div>
-              </div>
-              <div class="skill-item">
-                <div class="skill-info">
-                  <span class="skill-name">MLflow</span>
-                  <span class="skill-percentage">70%</span>
-                </div>
-                <div class="skill-bar">
-                  <div class="skill-progress" style="width: 70%"></div>
+                  <div class="skill-progress" style="width: 85%"></div>
                 </div>
               </div>
             </div>
@@ -204,35 +267,107 @@
 
           <div class="skill-category">
             <h3 class="skill-category-title">
-              <i class="fas fa-chart-line"></i>
-              Data & Machine Learning
+              <i class="fas fa-database"></i>
+              Data Processing & Analysis
             </h3>
             <div class="skill-items">
               <div class="skill-item">
                 <div class="skill-info">
-                  <span class="skill-name">Python</span>
-                  <span class="skill-percentage">85%</span>
+                  <span class="skill-name">Pandas</span>
+                  <span class="skill-percentage">95%</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="width: 88%"></div>
+                  <div class="skill-progress" style="width: 95%"></div>
                 </div>
               </div>
               <div class="skill-item">
                 <div class="skill-info">
-                  <span class="skill-name">Machine Learning</span>
-                  <span class="skill-percentage">85%</span>
+                  <span class="skill-name">NumPy</span>
+                  <span class="skill-percentage">95%</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="width: 82%"></div>
+                  <div class="skill-progress" style="width: 95%"></div>
                 </div>
               </div>
               <div class="skill-item">
                 <div class="skill-info">
                   <span class="skill-name">Data Visualization</span>
+                  <span class="skill-percentage">90%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 90%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">Feature Engineering</span>
+                  <span class="skill-percentage">90%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 90%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">Statistical Analysis</span>
                   <span class="skill-percentage">85%</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="width: 78%"></div>
+                  <div class="skill-progress" style="width: 85%"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="skill-category">
+            <h3 class="skill-category-title">
+              <i class="fas fa-server"></i>
+              MLOps & DevOps
+            </h3>
+            <div class="skill-items">
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">Docker</span>
+                  <span class="skill-percentage">90%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 90%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">Kubernetes</span>
+                  <span class="skill-percentage">85%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 85%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">MLflow</span>
+                  <span class="skill-percentage">85%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 85%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">Airflow</span>
+                  <span class="skill-percentage">80%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 80%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">CI/CD Pipelines</span>
+                  <span class="skill-percentage">85%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 85%"></div>
                 </div>
               </div>
             </div>
@@ -241,12 +376,30 @@
           <div class="skill-category">
             <h3 class="skill-category-title">
               <i class="fas fa-cloud"></i>
-              Cloud & Infrastructure
+              Cloud & Deployment
             </h3>
             <div class="skill-items">
               <div class="skill-item">
                 <div class="skill-info">
                   <span class="skill-name">AWS</span>
+                  <span class="skill-percentage">85%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 85%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">Google Cloud</span>
+                  <span class="skill-percentage">80%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 80%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">Azure</span>
                   <span class="skill-percentage">75%</span>
                 </div>
                 <div class="skill-bar">
@@ -255,11 +408,20 @@
               </div>
               <div class="skill-item">
                 <div class="skill-info">
-                  <span class="skill-name">Google Cloud</span>
-                  <span class="skill-percentage">70%</span>
+                  <span class="skill-name">SageMaker</span>
+                  <span class="skill-percentage">85%</span>
                 </div>
                 <div class="skill-bar">
-                  <div class="skill-progress" style="width: 70%"></div>
+                  <div class="skill-progress" style="width: 85%"></div>
+                </div>
+              </div>
+              <div class="skill-item">
+                <div class="skill-info">
+                  <span class="skill-name">Model Deployment</span>
+                  <span class="skill-percentage">90%</span>
+                </div>
+                <div class="skill-bar">
+                  <div class="skill-progress" style="width: 90%"></div>
                 </div>
               </div>
             </div>
