--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     />
   </head>
   <body>
+    <!-- Particle Canvas Background -->
+    <canvas id="particleCanvas" class="particle-canvas-background"></canvas>
+
     <!-- Navigation -->
     <nav class="navbar">
       <div class="nav-container">
@@ -64,8 +67,8 @@
             <span class="hero-name">Lukita Falensia Marjan</span>
           </h1>
           <p class="hero-description">
-            Mahasiswa Teknologi Rekayasa Informatika Industri yang
-            mempunyai minat besar dalam
+            Mahasiswa Teknologi Rekayasa Informatika Industri yang mempunyai
+            minat besar dalam
             <strong>Machine Learning Operations (MLOps)</strong>,
             <strong>Data Science</strong>, dan
             <strong>Machine Learning</strong>. Mari wujudkan transformasi
