--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Portfolio Lukita Falensia Marjan</title>
     <meta
       name="keywords"
-      content="Lukita Falensia Marjan, Portfolio, Informatika, MLOps, Data Science, Machine Learning, Python, Docker, Kubernetes"
+      content="Lukita Falensia Marjan, Portfolio, Informatika, ML Engineer, Data Science, Machine Learning, Python, Docker, Kubernetes"
     />
     <meta name="author" content="Lukita Falensia Marjan" />
     <meta name="robots" content="index, follow" />
@@ -69,9 +69,9 @@
           <p class="hero-description">
             Mahasiswa Teknologi Rekayasa Informatika Industri yang mempunyai
             minat besar dalam
-            <strong>Machine Learning Operations (MLOps)</strong>,
+            <strong>Machine Learning</strong>,
             <strong>Data Science</strong>, dan
-            <strong>Machine Learning</strong>. Mari wujudkan transformasi
+            <strong>Machine Learning Operations (MLOps)</strong>. Mari wujudkan transformasi
             digital industri bersama!
           </p>
           <div class="hero-buttons">
@@ -114,7 +114,7 @@
       <div class="container">
         <div class="section-header">
           <h2 class="section-title">Tentang Saya</h2>
-          <p class="section-subtitle">Mahasiswa & Future MLOps Engineer</p>
+          <p class="section-subtitle">Mahasiswa | Future Data Scientist & ML Engineer</p>
         </div>
         <div class="about-content">
           <div class="about-text">
@@ -123,7 +123,7 @@
               <strong>Teknologi Rekayasa Informatika Industri</strong> di
               <strong>Politeknik Manufaktur Bandung</strong> yang memiliki
               passion dalam bidang
-              <strong>Machine Learning Operations (MLOps)</strong>.
+              <strong>Data Science & Machine Learning (ML)</strong>.
             </p>
             <p>
               Saat ini saya fokus mempelajari <strong>Python</strong>,
@@ -325,7 +325,7 @@
           <div class="skill-category">
             <h3 class="skill-category-title">
               <i class="fas fa-server"></i>
-              MLOps & DevOps
+              ML & DevOps
             </h3>
             <div class="skill-items">
               <div class="skill-item">
@@ -767,7 +767,7 @@
               <span>Lukita Falensia Marjan</span>
             </div>
             <p class="footer-description">
-              Mahasiswa Informatika Industri | MLOps Engineer
+              Mahasiswa Informatika Industri | ML Engineer
             </p>
           </div>
           <div class="footer-section">
@@ -786,7 +786,7 @@
             <h3>Contact Info</h3>
             <ul class="footer-links">
               <li>
-                <i class="fas fa-envelope"></i> Lukita Falensia Marjan@gmail.com
+                <i class="fas fa-envelope"></i> LukitaFalensiaMarjan@gmail.com
               </li>
               <li><i class="fas fa-phone"></i> +62 813-8595-0989</li>
               <li><i class="fas fa-map-marker-alt"></i> Karawang, Indonesia</li>
